--- a/todo
+++ b/todo
@@ -5,15 +5,20 @@
 //watch task and lint tasks are doing both client and server
 //setup basic player
 //setup unit test suite
+//run it on my phone
+//lint errors don't kill gulp task and leave nodemon running
+//autoPlay
+//design UI
 
-run it on my phone
-lint errors don't kill gulp task and leave nodemon running
-disallow downloads
-turn on autoplay
+sorting
+filtering
 play next song
-design UI
+learn how manifests work
+
+
+make watch and eslint work in text editor
+disallow downloads
 shuffle
-filter
 make it look good
 setup integration test suite
 setup other type of test suite
@@ -21,8 +26,6 @@ how does karma compare to my gulpfile?
 create webpack bundle for libraries
 learn to read mp3 embedded data
 autogen library.json
-learn how manifests work
 try out different ways of ensuring the music is caches
 move to nginx
-make atom trigger watchers (or get a new text editor)
 optimize how the long list is displayed (if necessary)
