--- a/todo
+++ b/todo
@@ -9,23 +9,30 @@
 //lint errors don't kill gulp task and leave nodemon running
 //autoPlay
 //design UI
+//filtering
+//play next song
+//learn how manifests work
+//get phone app to run in background
+//test on dolphin--plays in background and goes to next song
+//test on safari--doesn't play in background
+//better express logger
 
-sorting
-filtering
-play next song
-learn how manifests work
-
-
-make watch and eslint work in text editor
-disallow downloads
-shuffle
+learn to read mp3 embedded data
+autogen library.json
+test in background for 1+ hours
+test effect on battery life
 make it look good
+
+test on chrome
+test on firefox
+test on other browsers
+sorting
+make watch and eslint work in text editor
+shuffle
 setup integration test suite
 setup other type of test suite
 how does karma compare to my gulpfile?
 create webpack bundle for libraries
-learn to read mp3 embedded data
-autogen library.json
-try out different ways of ensuring the music is caches
+try out different ways of ensuring the music caches
 move to nginx
 optimize how the long list is displayed (if necessary)
