--- a/todo
+++ b/todo
@@ -22,10 +22,9 @@
 //autogen manifest file
 //test in background for 1+ hours (started at 22:22) --nice results in dolphin
 //test effect on battery life --nice results in dolphin
+//make it look good
+//use react lint and not inferno lint
 
-use react lint and not inferno lint
-
-make it look good
 
 test on chrome
 test on firefox
@@ -39,6 +38,7 @@ how does karma compare to my gulpfile?
 create webpack bundle for libraries
 try out different ways of ensuring the music caches
 move to nginx
+really make it look good (colors and stuff)
 optimize how the long list is displayed (if necessary)
 handle ogg files better (metadata doesn't work)
 make initial load better (dynamically grow manifest to assist in page load?)
