--- a/todo
+++ b/todo
@@ -42,6 +42,7 @@ test on other browsers
 make watch and eslint work in text editor
 create webpack bundle for libraries
 move to nginx
+make jumping ahead work on phone
 really make it look good (colors and stuff)
 optimize how the long list is displayed (if necessary)
 handle ogg files better (metadata doesn't work)
