--- a/todo
+++ b/todo
@@ -24,24 +24,24 @@
 //test effect on battery life --nice results in dolphin
 //make it look good
 //use react lint and not inferno lint
+//make initial load better (pull down library, but only display songs after the data has arrived)
+//Move unit tests to karma
+//fix unit test on prep sub-project (should it have a second package.json?)
+//make watch and eslint work in text editor
 
-
-https://www.npmjs.com/package/gulp-autoprefixer
-cache to localstorage
+remove blob-util
+cache to localstorage (breakup files)
 cache to filesystemapi
 cache to indexedDB
-make initial load better (dynamically grow manifest to assist in page load?)
 sorting
 shuffle
-setup integration test suite
-setup other type of test suite
-how does karma compare to my gulpfile?
+https://www.npmjs.com/package/gulp-autoprefixer
 
-
+dynamically determine header.height and set headerplaceholder.height to match
 test on chrome
 test on firefox
 test on other browsers
-make watch and eslint work in text editor
+setup istanbul for code coverage
 create webpack bundle for libraries
 move to nginx
 make jumping ahead work on phone
@@ -49,3 +49,5 @@ really make it look good (colors and stuff)
 optimize how the long list is displayed (if necessary)
 handle ogg files better (metadata doesn't work)
 come up with good stylelint rules
+how to deploy node product
+setup integration test suite (nightshade or selenium directly)
