--- a/todo
+++ b/todo
@@ -47,9 +47,9 @@
 //make vi work with es6
 //make gulp go faster
 //Make app behave better when caching fails (will try to download each time it opens, but will never try to download a file larger than one that failed.  Chrome doesn't give QuotaExceededError (it reports success), so this doesn't work there).
+//https://www.npmjs.com/package/gulp-autoprefixer
+//make ctags work with vim https://github.com/andreypopp/ctags-webpack-plugin
 
-https://www.npmjs.com/package/gulp-autoprefixer
-make ctags work with vim https://github.com/andreypopp/ctags-webpack-plugin
 dynamically determine header.height and set headerplaceholder.height to match
 setup istanbul for code coverage
 create webpack bundle for libraries
