Fixed scss lint errors

--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 change to more semantic elements (header at least)
-make jumping in a song ahead work on phone
+make jumping in a song ahead work on phone (progress bar visible)
 are 404s causing me to leak a promise ticket?
 would views/app.js read better if fewer things were passed in?
 setup istanbul for code coverage
@@ -20,6 +20,7 @@ shuffle
 support playlists
 
 
+//fix scss linting errors
 //get better vim formatting for scss
 //come up with good stylelint rules
 //ensure linter catches missing semicolon in scss
