--- a/todo
+++ b/todo
@@ -1,5 +1,3 @@
-are 404s causing me to leak a promise ticket?
-would views/app.js read better if fewer things were passed in?
 setup istanbul for code coverage
 create webpack bundle for libraries
 move to nginx
@@ -18,6 +16,8 @@ shuffle
 support playlists
 
 
+//would views/app.js read better if fewer things were passed in?
+//are 404s causing me to leak a promise ticket?
 //make jumping in a song ahead work on phone (progress bar visible)
 //change to more semantic elements (header at least)
 //fix scss linting errors
